--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:text="Toppings"
+        android:text="@string/toppings"
         android:textAllCaps="true" />
 
     <CheckBox
@@ -40,8 +40,10 @@
         android:textSize="16sp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:paddingLeft="24dp" />
+        android:paddingLeft="24dp"
+        android:paddingStart="24dp"/>
 
     <CheckBox
         android:id="@+id/chocolate_checkbox"
@@ -51,8 +53,10 @@
         android:textSize="16sp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:paddingLeft="24dp" />
+        android:paddingLeft="24dp"
+        android:paddingStart="24dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,7 +65,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:text="quantity"
+        android:text="@string/quantity"
         android:textAllCaps="true" />
 
     <LinearLayout
@@ -76,12 +80,14 @@
             android:layout_height="48dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:onClick="decrement"
-            android:text="-"
+            android:text="@string/minus"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/quantity_text_view"
@@ -89,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:text="1"
+            android:text="@string/first"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
@@ -97,36 +103,16 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:onClick="increment"
-            android:text="+"
+            android:text="@string/plus"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Order Summary"
-        android:textAllCaps="true" />
-
-    <TextView
-        android:id="@+id/order_summary_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:text="$0"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -135,9 +121,9 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:onClick="submitOrder"
-        android:text="Order"
+        android:text="@string/order"
         android:textColor="@android:color/black"
-        android:textSize="16dp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
 
